--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2' //embedded-redis
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//View
