--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
   profiles:
     active: local
 
+  redis:
+    host: localhost
+    port: 6380
+
   datasource:
     url: jdbc:h2:tcp://localhost/~/chat
     username: sa
