security & jwt 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
   profiles:
     active: local
 
+  jwt:
+    secret: mySecretKey!@#$%^&*()-_~
+
   redis:
     host: localhost
     port: 6380
